[tool.poetry]
name = "unit-literals"
version = "0.1.0"
description = ""
authors = ["Adam Hupp <adam@hupp.org>"]
packages = [{include = "unit_literals"}]

[tool.poetry.dependencies]
python = ">=3.7, < 4"
Pint = "^0.17"
ipython = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
extend-exclude = 'pegen_.*py$'