[tool.poetry]
name = "unit-syntax"
version = "0.1.8"
authors = ["Adam Hupp <adam@hupp.org>"]
packages = [{include = "unit_syntax"}]
readme = "README.md"
repository = "https://github.com/ahupp/unit-syntax"
description = "Physical unit literals for Jupyter and IPython"

[tool.poetry.dependencies]
python = ">=3.8, < 4"
Pint = "^0.20"
ipython = ">=7"
pegen = "^0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2"
black = "^22.12"
numpy = "^1.24.3"
twine = "^4.0.2"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
include = '\.pyi?$'
extend-exclude = 'parser.py$'