[tool.poetry]
name = "unit-literals-test-ipython-latest"
version = "0.1.0"
description = ""
authors = ["Adam Hupp <adam@hupp.org>"]

[tool.poetry.dependencies]
python = ">= 3.8, < 4"
unit_literals = { path = "../../" }
ipython = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
